--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>India Times</title>
   </head>
   <body>
-    <div class="title-section">
+    <div class="title-section" id="home">
       <h1 class="title">INDIA TIMES</h1>
       <h3 class="title-tag">The India in a headline</h3>
     </div>
@@ -47,10 +47,16 @@
       </div>
     </div>
 
+    <div class="back-to-top-container">
+      <a id="back-to-top-link" href="#home">
+        <i class="fas fa-2x back-to-top fa-angle-double-up"></i>
+      </a>
+    </div>
+
     <div class="main">
       <div class="main-container" id="card-template">
         <div class="trend-icon">
-          <i class="trending fas fa-2x fa-chart-line"></i>
+          <i class="trending fas fa-chart-line"></i>
           <!-- <i class="fas trending fa-2x fa-fire"></i> -->
           <span class="trending">Trending</span>
         </div>
@@ -60,6 +66,10 @@
     <div class="loader-container">
       <div class="loader" id="loader"></div>
     </div>
+
+    <footer>
+      <p>Designed and Developed by <span>ABI</span></p>
+    </footer>
     <script src="/main.js"></script>
   </body>
 </html>
